<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical"
    tools:context="com.a0xffffffff.dinesum.NewRequestFragment">

    <fragment
        android:id="@+id/place_autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/editStartTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:backgroundTint="@color/colorPrimaryDark"
            android:maxLines="1"
            android:focusableInTouchMode="false"
            android:hint="Start Time"/>

        <EditText
            android:id="@+id/editEndTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:gravity="center_horizontal"
            android:backgroundTint="@color/colorPrimaryDark"
            android:maxLines="1"
            android:focusableInTouchMode="false"
            android:hint="End Time"/>
    </LinearLayout>

    <EditText
        android:id="@+id/editPartyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="Party Name"/>

    <EditText
        android:id="@+id/editNumberInParty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="Number In Party"
        android:inputType="number"/>

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="Price"
        android:inputType="number"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:text="Submit"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue_400"/>
    </RelativeLayout>


</LinearLayout>
