<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:title="Refresh"
        android:icon="@drawable/ic_refresh_white"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_logout"
...
